2001-05-09  Jody Goldberg <jgoldberg@home.com>

	* src/xml-io.c (xml_read_selection_info) : typo.  Use the child not
	  the parent node.
	(xml_write_selection_info) : Save the real position.

	* src/sheet.c (sheet_new_scg) : set cursor bound, not the details.
	(sheet_cursor_set) : add some sanity checks.
	(sheet_clone_selection) : use the real edit_pos.

2001-05-09  Jody Goldberg <jgoldberg@home.com>

	* src/item-cursor.c (cb_move_cursor) : typo.

	* src/cmd-edit.c (cmd_shift_cols) : correct bound if shifting right.
	(cmd_shift_rows) : correct bound if shifting down.

	* src/gnumeric-sheet.c (gnumeric_sheet_make_cell_visible) : If the
	  first == last then it is likely we are uninitialized and we can
	  start the search from the first the target may be contained in the
	  current region without scrolling.

	* src/sheet-control-gui.c (scg_construct) : resize is now called when
	  attached and the zoom scg_set_zoom_factor is set.
	(scg_set_zoom_factor) : resize.

	* src/workbook-control.c (workbook_control_init_state) : cut-n-paste-o.

2001-05-08  Jody Goldberg <jgoldberg@home.com>

	* src/selection.c (sheet_selection_set_internal) : split this out into.
	* src/sheet-merge.c (sheet_merge_find_container) : here.
	* src/sheet-control-gui.c (scg_rangesel_changed) : and here.

2001-05-08  Jody Goldberg <jgoldberg@home.com>

	* src/xml-io.c (xml_read_selection_info) : Use sheet_set_edit_pos.

	* src/selection.c (sheet_selection_extend) : merge into
	  scg_cursor_extend.

	* src/sheet-control-gui.c (scg_cursor_move_to) : rename from
	  scg_cursor_move.
	(scg_cursor_extend) : merge scg_cursor_extend_[hv]
	(scg_cursor_move) : merge scg_cursor_move_[hv]
	(scg_rangesel_extend) : merge scg_rangesel_extend_[hv]
	(scg_rangesel_move) : merge scg_rangesel_move_[hv]
	(scg_rangesel_start) : cleanup.

	* src/gnumeric-sheet.c (gnumeric_sheet_key_mode_sheet) : fix handling
	  of Home. Simplify the function pointers for move vs extend by
	  merging horizontal and vertical versions.
